@@ -10,8 +10,7 @@ TARGET_DIR=$ROOT_DIR/my_build/main
 
 mkdir -p $TARGET_DIR
 
-javac --release 19 --enable-preview \
--cp $CLASSPATH \
+javac -cp $CLASSPATH \
 -d $TARGET_DIR `find $SRC_DIR -name "*.java"`
 
 echo "compile ok"
