@@ -9,7 +9,6 @@ CLASSPATH=$CLASSPATH:$TARGET_DIR
 
 java --enable-preview \
 -cp $CLASSPATH \
---add-modules jdk.incubator.concurrent \
 net.codetojoy.Runner
 
 echo "run complete"
