@@ -10,9 +10,8 @@ TARGET_DIR=$ROOT_DIR/my_build/main
 
 mkdir -p $TARGET_DIR
 
-javac --release 19 --enable-preview \
+javac --release 21 --enable-preview \
 -cp $CLASSPATH \
---add-modules jdk.incubator.concurrent \
 -d $TARGET_DIR `find $SRC_DIR -name "*.java"`
 
 echo "compile ok"
